--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,23 +121,23 @@ jobs:
           release-type: python
           package-name: cnext
 
-      - name: "Create release"
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: actions/github-script@v6
-        with:
-          github-token: "${{ secrets.BOT_TOKEN }}"
-          script: |
-            const { REL_VERSION } = process.env
+      # - name: "Create release"
+      #   if: startsWith(github.ref, 'refs/tags/v')
+      #   uses: actions/github-script@v6
+      #   with:
+      #     github-token: "${{ secrets.BOT_TOKEN }}"
+      #     script: |
+      #       const { REL_VERSION } = process.env
 
-            await github.rest.repos.createRelease({
-              draft: false,
-              generate_release_notes: true,
-              name: REL_VERSION,
-              owner: context.repo.owner,
-              prerelease: false,
-              repo: context.repo.repo,
-              tag_name: REL_VERSION,
-            });
+      #       await github.rest.repos.createRelease({
+      #         draft: false,
+      #         generate_release_notes: true,
+      #         name: REL_VERSION,
+      #         owner: context.repo.owner,
+      #         prerelease: false,
+      #         repo: context.repo.repo,
+      #         tag_name: REL_VERSION,
+      #       });
 
       - name: Publish to PyPI
         if: startsWith(github.ref, 'refs/tags/v')
