--- a/cnext_app/package.json
+++ b/cnext_app/package.json
@@ -11,19 +11,19 @@
         "test": "jest config ./jest.config.js --watch"
     },
     "dependencies": {
-        "@auth0/auth0-react": "^1.10.1",
+        "@auth0/auth0-react": "^1.10.2",
         "@codemirror/autocomplete": "~6.1.0",
         "@codemirror/commands": "~6.0.1",
-        "@codemirror/search": "~6.0.1",
         "@codemirror/lang-javascript": "~6.0.0",
         "@codemirror/lang-json": "~6.0.0",
         "@codemirror/lang-python": "~6.0.1",
         "@codemirror/lang-sql": "~6.2.0",
         "@codemirror/language": "~6.2.1",
         "@codemirror/lint": "~6.0.0",
+        "@codemirror/search": "~6.0.1",
         "@codemirror/state": "~6.1.1",
-        "@codemirror/view": "~6.2.0",
         "@codemirror/theme-one-dark": "~6.0.0",
+        "@codemirror/view": "~6.2.0",
         "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
         "@jupyter-widgets/jupyterlab-manager": "^3.1.0",
@@ -34,17 +34,17 @@
         "@lumino/coreutils": "^1.12.0",
         "@lumino/messaging": "^1.10.1",
         "@lumino/widgets": "^1.31.1",
-        "@mui/icons-material": "~5.6.2",
-        "@mui/lab": "~5.0.0-alpha.60",
-        "@mui/material": "~5.0.2",
-        "@mui/styles": "~5.0.1",
-        "@mui/system": "~5.0.1",
+        "@mui/icons-material": "~5.10.2",
+        "@mui/lab": "~5.0.0-alpha.90",
+        "@mui/material": "~5.10.2",
+        "@mui/styles": "~5.10.2",
+        "@mui/system": "~5.10.2",
         "@open-rpc/client-js": "^1.6.2",
         "@reduxjs/toolkit": "^1.6.2",
         "@sentry/nextjs": "^6.19.7",
         "@types/react-plotly.js": "^2.5.0",
-        "@uiw/react-codemirror": "~4.9.2",
-        "ace-builds": "^1.4.13",
+        "@uiw/react-codemirror": "~4.11.6",
+        "ace-builds": "^1.9.6",
         "animate.css": "^4.1.1",
         "ansi-to-react": "^6.1.6",
         "backbone": "^1.4.1",
@@ -52,14 +52,14 @@
         "inline-style-prefixer": "^4.0.0",
         "jquery-ui": "^1.13.1",
         "moment-timezone": "^0.5.34",
-        "next": "11.1.2",
+        "next": "12.2.5",
         "polished": "^4.1.3",
         "python-shell": "^3.0.0",
         "re-resizable": "^6.9.9",
-        "react": "^17.0.2",
-        "react-ace": "^9.4.4",
+        "react": "^18.2.0",
+        "react-ace": "^10.1.0",
         "react-beforeunload": "^2.1.1",
-        "react-dom": "^17.0.2",
+        "react-dom": "^18.2.0",
         "react-feather": "^2.0.9",
         "react-grid-layout": "^1.3.1",
         "react-helmet": "^6.1.0",
@@ -70,7 +70,6 @@
         "react-perfect-scrollbar": "^1.5.8",
         "react-plotly.js": "^2.5.1",
         "react-query": "^3.34.7",
-        "react-query-devtools": "^3.0.0-beta.1",
         "react-redux": "^7.2.5",
         "react-scroll-into-view-if-needed": "^3.0.1",
         "react-scroll-to-bottom": "^4.1.2",
@@ -89,11 +88,12 @@
         "xterm-addon-search": "^0.8.2"
     },
     "devDependencies": {
+        "@lezer/common": "^1.0.0",
         "@lezer/generator": "^1.0.0",
         "@lezer/lr": "^1.0.0",
-        "@lezer/common": "^1.0.0",
         "@types/ace": "^0.0.47",
         "@types/inline-style-prefixer": "^5.0.0",
+        "@types/node": "^18.7.13",
         "@types/react": "17.0.27",
         "@types/react-beforeunload": "^2.1.1",
         "@types/react-dom": "^18.0.4",
