--- a/cnext_server/server/package.json
+++ b/cnext_server/server/package.json
@@ -10,6 +10,8 @@
     "dependencies": {
         "dotenv": "~16.0.0",
         "express": "~4.17.1",
+        "http-proxy": "^1.18.1",
+        "http-proxy-middleware": "^2.0.6",
         "node-addon-api": "~4.2.0",
         "node-gyp-build": "~4.3.0",
         "nodemon": "~2.0.15",
