--- a/cnext_app/package.json
+++ b/cnext_app/package.json
@@ -45,8 +45,9 @@
         "@uiw/react-codemirror": "~4.11.6",
         "ace-builds": "^1.9.6",
         "animate.css": "^4.1.1",
-        "ansi-to-react": "^6.1.6",
+        "anser": "^2.1.1",
         "backbone": "^1.4.1",
+        "escape-carriage": "^1.3.0",
         "html-react-parser": "^1.4.8",
         "inline-style-prefixer": "^4.0.0",
         "jquery-ui": "^1.13.1",
