--- a/cnext_app/package.json
+++ b/cnext_app/package.json
@@ -34,6 +34,7 @@
         "@lumino/coreutils": "^1.12.0",
         "@lumino/messaging": "^1.10.1",
         "@lumino/widgets": "^1.31.1",
+        "@monaco-editor/react": "^4.4.5",
         "@mui/icons-material": "~5.10.2",
         "@mui/lab": "~5.0.0-alpha.90",
         "@mui/material": "~5.10.2",
@@ -52,6 +53,7 @@
         "inline-style-prefixer": "^4.0.0",
         "jquery-ui": "^1.13.1",
         "moment-timezone": "^0.5.34",
+        "monaco-editor": "^0.34.0",
         "next": "12.2.5",
         "polished": "^4.1.3",
         "python-shell": "^3.0.0",
