--- a/cnext_server/server/package.json
+++ b/cnext_server/server/package.json
@@ -12,10 +12,12 @@
         "express": "~4.17.1",
         "http-proxy": "^1.18.1",
         "http-proxy-middleware": "^2.0.6",
+        "nanoid": "^4.0.0",
         "node-addon-api": "~4.2.0",
         "node-gyp-build": "~4.3.0",
         "nodemon": "~2.0.15",
         "python-shell": "~3.0.1",
+        "request": "^2.88.2",
         "socket.io": "~4.2.0",
         "socket.io-client": "~4.2.0",
         "ssh2": "^1.11.0",
