--- a/cnext_app/package.json
+++ b/cnext_app/package.json
@@ -52,6 +52,7 @@
         "inline-style-prefixer": "^4.0.0",
         "jquery-ui": "^1.13.1",
         "moment-timezone": "^0.5.34",
+        "nanoid": "^3.1.23",
         "next": "12.2.5",
         "polished": "^4.1.3",
         "python-shell": "^3.0.0",
