--- a/cnext_server/server/package.json
+++ b/cnext_server/server/package.json
@@ -12,7 +12,6 @@
         "express": "~4.17.1",
         "http-proxy": "^1.18.1",
         "http-proxy-middleware": "^2.0.6",
-        "nanoid": "^4.0.0",
         "node-addon-api": "~4.2.0",
         "node-gyp-build": "~4.3.0",
         "nodemon": "~2.0.15",
@@ -22,6 +21,7 @@
         "socket.io-client": "~4.2.0",
         "ssh2": "^1.11.0",
         "yaml": "~1.10.2",
-        "zeromq": "~6.0.0-beta.6"
+        "zeromq": "~6.0.0-beta.6",
+        "nanoid": "^3.1.23"
     }
 }
