--- a/cnext_server/server/package.json
+++ b/cnext_server/server/package.json
@@ -20,6 +20,7 @@
         "socket.io-client": "~4.2.0",
         "ssh2": "^1.11.0",
         "yaml": "~1.10.2",
-        "zeromq": "~6.0.0-beta.6"
+        "zeromq": "~6.0.0-beta.6",
+        "nanoid": "^3.1.23"
     }
 }
