--- a/cnext_server/server/package.json
+++ b/cnext_server/server/package.json
@@ -6,7 +6,7 @@
         "start": "nodemon server.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "start-prod": "node server.js",
-        "start-dev": "set EVENT_LOG_DISABLE=true && nodemon server.js"
+        "dev": "set EVENT_LOG_DISABLE=true && nodemon server.js"
     },
     "dependencies": {
         "dotenv": "~16.0.0",
