--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,11 +47,15 @@ pandas = "~1.3.5"
 multipledispatch = "^0.6.0"
 python-language-server = "^0.36.2"
 cnextlib = "^0.5.0"
-netron = "^5.7.8"
+netron = "^6.0.9"
 sentry-sdk = "^1.5.12"
 protobuf = "3.20.1"
 pyreadline = "^2.1"
 jupyter-resource-usage = "^0.6.1"
+pyflakes = "^2.5.0"
+mccabe = "^0.7.0"
+pycodestyle = "^2.9.1"
+pydocstyle = "^6.1.1"
 
 [tool.poetry.dev-dependencies]
 
