fix: add missing package.json

--- a/cnext_app/package.json
+++ b/cnext_app/package.json
@@ -41,7 +41,10 @@
         "@open-rpc/client-js": "^1.6.2",
         "@reduxjs/toolkit": "^1.6.2",
         "@sentry/nextjs": "^6.19.7",
+        "@tanstack/react-table": "^8.5.15",
+        "@tanstack/react-virtual": "^3.0.0-beta.18",
         "@types/react-plotly.js": "^2.5.0",
+        "@types/react-table": "^7.7.12",
         "@uiw/react-codemirror": "~4.11.6",
         "ace-builds": "^1.9.6",
         "animate.css": "^4.1.1",
