--- a/cnext_app/package.json
+++ b/cnext_app/package.json
@@ -26,6 +26,7 @@
         "@codemirror/view": "~6.2.0",
         "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
+        "@faker-js/faker": "^7.5.0",
         "@jupyter-widgets/jupyterlab-manager": "^3.1.0",
         "@jupyterlab/coreutils": "^5.4.3",
         "@jupyterlab/outputarea": "^3.3.2",
@@ -41,6 +42,8 @@
         "@open-rpc/client-js": "^1.6.2",
         "@reduxjs/toolkit": "^1.6.2",
         "@sentry/nextjs": "^6.19.7",
+        "@tanstack/react-query": "^4.10.3",
+        "@tanstack/react-table": "^8.5.15",
         "@types/react-plotly.js": "^2.5.0",
         "@uiw/react-codemirror": "~4.11.6",
         "ace-builds": "^1.9.6",
@@ -76,6 +79,7 @@
         "react-split-pane-v2": "^1.0.3",
         "react-toastify": "^8.0.3",
         "react-transition-group": "^4.4.2",
+        "react-virtual": "^2.10.4",
         "redux": "^4.1.1",
         "remark-gfm": "^3.0.1",
         "shortid": "^2.2.16",
