--- a/cnext_app/package.json
+++ b/cnext_app/package.json
@@ -42,6 +42,7 @@
         "@reduxjs/toolkit": "^1.6.2",
         "@sentry/nextjs": "^6.19.7",
         "@tanstack/react-table": "^8.5.15",
+        "@tanstack/virtual-core": "^3.0.0-alpha.1",
         "@types/react-plotly.js": "^2.5.0",
         "@types/react-table": "^7.7.12",
         "@uiw/react-codemirror": "~4.11.6",
@@ -79,7 +80,6 @@
         "react-split-pane-v2": "^1.0.3",
         "react-toastify": "^8.0.3",
         "react-transition-group": "^4.4.2",
-        "react-virtual": "^2.10.4",
         "redux": "^4.1.1",
         "remark-gfm": "^3.0.1",
         "shortid": "^2.2.16",
