fix(ide): downgrade virtual-scroll from v3 to v2

--- a/cnext_app/package.json
+++ b/cnext_app/package.json
@@ -39,10 +39,10 @@
         "@mui/material": "~5.10.2",
         "@mui/system": "~5.10.2",
         "@open-rpc/client-js": "^1.6.2",
+        "@reach/observe-rect": "^1.2.0",
         "@reduxjs/toolkit": "^1.6.2",
         "@sentry/nextjs": "^6.19.7",
         "@tanstack/react-table": "^8.5.15",
-        "@tanstack/virtual-core": "^3.0.0-alpha.1",
         "@types/react-plotly.js": "^2.5.0",
         "@types/react-table": "^7.7.12",
         "@uiw/react-codemirror": "~4.11.6",
