--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ sentry-sdk = "^1.5.12"
 protobuf = "3.20.1"
 pyreadline = "^2.1"
 jupyter-resource-usage = "^0.6.1"
+matplotlib-inline = "^0.1.6"
 
 [tool.poetry.dev-dependencies]
 
