--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,34 +47,34 @@ jobs:
           dasel put string -f pyproject.toml .tool.poetry.version "$REL_VERSION_STRICT"
           cat pyproject.toml
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: 'npm'
-          cache-dependency-path: |
-            cnext_app/package-lock.json
-            cnext_server/server/package-lock.json
+      # - uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 16
+      #     cache: 'npm'
+      #     cache-dependency-path: |
+      #       cnext_app/package-lock.json
+      #       cnext_server/server/package-lock.json
 
-      - name: Install dependencies
-        working-directory: ./cnext_app
-        run: npm ci
+      # - name: Install dependencies
+      #   working-directory: ./cnext_app
+      #   run: npm ci
 
-      - name: Install dependencies
-        working-directory: ./cnext_server/server
-        run: npm ci
+      # - name: Install dependencies
+      #   working-directory: ./cnext_server/server
+      #   run: npm ci
 
-      - name: Cache Next.js
-        uses: actions/cache@v3
-        with:
-          path: |
-            ${{ github.workspace }}/cnext_app/.next/cache
-          key: ${{ runner.os }}-app-${{ hashFiles('cnext_app/**/*.[jt]s', 'cnext_app/**/*.[jt]sx') }}
-          restore-keys: |
-            ${{ runner.os }}-app-
+      # - name: Cache Next.js
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: |
+      #       ${{ github.workspace }}/cnext_app/.next/cache
+      #     key: ${{ runner.os }}-app-${{ hashFiles('cnext_app/**/*.[jt]s', 'cnext_app/**/*.[jt]sx') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-app-
 
-      - name: Build IDE
-        working-directory: ./cnext_app
-        run: npm run build
+      # - name: Build IDE
+      #   working-directory: ./cnext_app
+      #   run: npm run build
 
       - name: Install poetry
         run: pipx install poetry
@@ -90,8 +90,8 @@ jobs:
       #     poetry env use 3.9
       #     poetry install
 
-      - name: Copy output
-        run: cp -rf ./cnext_app/out ./cnext_server/public
+      # - name: Copy output
+      #   run: cp -rf ./cnext_app/out ./cnext_server/public
 
       # - name: Cypress run
       #   uses: cypress-io/github-action@v4
@@ -111,17 +111,17 @@ jobs:
           poetry env use 3.9
           poetry build
 
-      - uses: actions/upload-artifact@v3
-        with:
-          name: python-package
-          path: dist
+      # - uses: actions/upload-artifact@v3
+      #   with:
+      #     name: python-package
+      #     path: dist
 
-      - uses: google-github-actions/release-please-action@v3
-        if: startsWith(github.ref, 'refs/heads/main')
-        with:
-          token: ${{secrets.BOT_TOKEN}}
-          release-type: python
-          package-name: cnext
+      # - uses: google-github-actions/release-please-action@v3
+      #   if: startsWith(github.ref, 'refs/heads/main')
+      #   with:
+      #     token: ${{secrets.BOT_TOKEN}}
+      #     release-type: python
+      #     package-name: cnext
 
       # - name: "Create release"
       #   if: startsWith(github.ref, 'refs/tags/v')
@@ -141,62 +141,62 @@ jobs:
       #         tag_name: REL_VERSION,
       #       });
 
-      - name: Publish to PyPI
-        if: startsWith(github.ref, 'refs/tags/v')
-        env:
-          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_API_TOKEN }}
-        run: poetry publish
+      # - name: Publish to PyPI
+      #   if: startsWith(github.ref, 'refs/tags/v')
+      #   env:
+      #     POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_API_TOKEN }}
+      #   run: poetry publish
 
-      - name: Notify Slack Releases Channel
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: slackapi/slack-github-action@v1.19.0
-        with:
-          payload: |
-            {
-              "text": "CNext ${{ env.REL_VERSION }} has been released."
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+      # - name: Notify Slack Releases Channel
+      #   if: startsWith(github.ref, 'refs/tags/v')
+      #   uses: slackapi/slack-github-action@v1.19.0
+      #   with:
+      #     payload: |
+      #       {
+      #         "text": "CNext ${{ env.REL_VERSION }} has been released."
+      #       }
+      #   env:
+      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      #     SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
-  docker:
-    needs: build
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+  # docker:
+  #   needs: build
+  #   if: startsWith(github.ref, 'refs/tags/v')
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+  #     - name: Set up QEMU
+  #       uses: docker/setup-qemu-action@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v2
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+  #     - name: Login to Docker Hub
+  #       uses: docker/login-action@v2
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Download Dasel
-        run: |
-          curl -sSLf "$(curl -sSLf https://api.github.com/repos/tomwright/dasel/releases/latest | grep browser_download_url | grep linux_amd64 | grep -v .gz | cut -d\" -f 4)" -L -o dasel && chmod +x dasel
-          mv ./dasel /usr/local/bin/dasel
+  #     - name: Download Dasel
+  #       run: |
+  #         curl -sSLf "$(curl -sSLf https://api.github.com/repos/tomwright/dasel/releases/latest | grep browser_download_url | grep linux_amd64 | grep -v .gz | cut -d\" -f 4)" -L -o dasel && chmod +x dasel
+  #         mv ./dasel /usr/local/bin/dasel
 
-      - name: Get version
-        id: version
-        run: echo "::set-output name=version::$(dasel select -f pyproject.toml .tool.poetry.version)"
+  #     - name: Get version
+  #       id: version
+  #       run: echo "::set-output name=version::$(dasel select -f pyproject.toml .tool.poetry.version)"
 
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          build-args: |
-            CNEXT_VERSION=${{ steps.version.outputs.version }}
-          tags: |
-            cycai/cnext:latest
-            cycai/cnext:v${{ steps.version.outputs.version }}
+  #     - name: Build and push
+  #       uses: docker/build-push-action@v3
+  #       with:
+  #         push: true
+  #         build-args: |
+  #           CNEXT_VERSION=${{ steps.version.outputs.version }}
+  #         tags: |
+  #           cycai/cnext:latest
+  #           cycai/cnext:v${{ steps.version.outputs.version }}
 
   # test-install:
   #   strategy:
