--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,21 +47,21 @@ jobs:
           dasel put string -f pyproject.toml .tool.poetry.version "$REL_VERSION_STRICT"
           cat pyproject.toml
 
-      # - uses: actions/setup-node@v3
-      #   with:
-      #     node-version: 16
-      #     cache: 'npm'
-      #     cache-dependency-path: |
-      #       cnext_app/package-lock.json
-      #       cnext_server/server/package-lock.json
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: |
+            cnext_app/package-lock.json
+            cnext_server/server/package-lock.json
 
-      # - name: Install dependencies
-      #   working-directory: ./cnext_app
-      #   run: npm ci
+      - name: Install dependencies
+        working-directory: ./cnext_app
+        run: npm ci
 
-      # - name: Install dependencies
-      #   working-directory: ./cnext_server/server
-      #   run: npm ci
+      - name: Install dependencies
+        working-directory: ./cnext_server/server
+        run: npm ci
 
       # - name: Cache Next.js
       #   uses: actions/cache@v3
