--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,9 +59,9 @@ jobs:
       #   working-directory: ./cnext_app
       #   run: npm ci
 
-      # - name: Install dependencies
-      #   working-directory: ./cnext_server/server
-      #   run: npm ci
+      - name: Install dependencies
+        working-directory: ./cnext_server/server
+        run: npm ci
 
       # - name: Cache Next.js
       #   uses: actions/cache@v3
